src/objects/Action_Plans_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Set the basic settings for My Action Plans App</description>
    <fields>
        <fullName>Chatter_Object_Brag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Chatter Object Brag when a New Action Plan for this object is created.</description>
        <inlineHelpText>Enable Chatter Object Brag when a New Action Plan for this object is created.</inlineHelpText>
        <label>Enable Chatter Object Brag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unassigned_Task_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>123656</description>
        <inlineHelpText>If the Task is Unassigned in the Template, and this is Checked, the assigned User for the Task is the Owner of the Record. If this setting is unchecked, the assigned User for the Task is the Current User.</inlineHelpText>
        <label>Unassigned Task Defaults to Record Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nnn__c</fullName>
        <label>nnn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Action Plans Settings</label>
</CustomObject>